commit 26: update templates

--- a/templates/list_room.html
+++ b/templates/list_room.html
@@ -11,7 +11,7 @@
     --color-dark-light: #555;
     --color-dark-medium: #777;
     --color-gray: #999;
-    --color-background: #FFF;
+    --color-background: #61677A;
   }
   
   .apply-now {
@@ -42,12 +42,16 @@
   
   .roomList__header h1 {
     font-size: 2.5rem;
-    color: var(--color-dark);
+    color: #FFF;
+  }
+
+  .roomList__header p{
+    color: #FFF;
   }
   
   .btn--main {
-    background-color: #a12c2f;
-    color: #FFF;
+    background-color: #FFF6E0;
+    color: #333;
     padding: 1rem 2rem;
     border-radius: 35px;
     text-decoration: none;
@@ -56,13 +60,13 @@
   
   .btn--main:hover {
     background-color: #FFCF96;
-    color: #FFF;
+    color: #333;
   }
   
   .roomListRoom {
     margin-bottom: 2rem;
     padding: 2rem;
-    background-color: #B3C8CF;
+    background-color: #D8D9DA;
     border-radius: 15px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
