--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -21,8 +21,11 @@
   <link rel="stylesheet" href="{% static 'css/templatemo-edu-meeting.css' %}">
   <link rel="stylesheet" href="{% static 'css/owl.css' %}">
   <link rel="stylesheet" href="{% static 'css/lightbox.css' %}">
+  <!-- Trong thẻ <head> của trang web của bạn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/regular.min.css" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
 
 
   <!--
@@ -43,6 +46,10 @@ https://templatemo.com/tm-569-edu-meeting
     {% elif 'welcome_back' in message.tags %}
       <div class="text-center alert-info" role="alert" style="padding: 0.5rem 0.5rem;">{{ message }}</div>
     {% elif 'welcome' in message.tags %}
+      <div class="text-center alert-info" role="alert" style="padding: 0.5rem 0.5rem;">{{ message }}</div>
+    {% elif 'username_exist' in message.tags %}
+      <div class="text-center alert-info" role="alert" style="padding: 0.5rem 0.5rem;">{{ message }}</div>
+    {% elif 'password_notmatch' in message.tags %}
       <div class="text-center alert-info" role="alert" style="padding: 0.5rem 0.5rem;">{{ message }}</div>
     {% endif %}
   {% endfor %}
@@ -79,7 +86,7 @@ https://templatemo.com/tm-569-edu-meeting
               </li>
               {% endif %}
               {% if user.is_authenticated %}
-              {% if not is_manager %}
+              {% if not is_manager and not is_admin %}
               <li class="has-sub">
                 <a href="javascript:void(0)">Contributions</a>
                 <ul class="sub-menu">
@@ -109,6 +116,11 @@ https://templatemo.com/tm-569-edu-meeting
               <li >
                 <a href="{% url 'profile' %}">hello {{ request.user.userprofile.fullname }}</a>
               </li>
+              {% if not is_admin %}
+              <li>
+                <a href="{% url 'list_room'%}">Chat Room</a>
+              </li>
+              {% endif %}
               <li>
                 <a href="{% url 'logout'%}">Logout</a>
               </li>
