--- a/templates/room.html
+++ b/templates/room.html
@@ -1,7 +1,6 @@
 {% extends "header_footer.html" %}
 {%load static%}
 {% block content %}
-
 <style>
   :root {
     --color-main: #FF5733;
@@ -130,6 +129,18 @@
     width: 50px;
   }
 
+  .truncate-text {
+    white-space: nowrap;      
+    overflow: hidden;         
+    text-overflow: ellipsis;   
+    display: inline-block;    
+    max-width: 200px;          
+  }   
+
+  .file-upload svg:hover {
+    color: #FF204E;
+  }
+  
 
   </style>
 
@@ -137,12 +148,12 @@
     <div class="container">
       <div class="row">
         <!-- Room Start -->
-        <div class="room col-md-8 mx-auto">
+        <div class="room col-md-12 mx-auto">
           <div class="room__top">
             <div class="room__topLeft">
-              <a href="{% url 'home' %}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
-                  <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4z"/>
+              <a href="{% url "list_room" %}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-left fw-bold" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
                 </svg>
               </a>
             </div>
@@ -171,11 +182,11 @@
                 <span>Created {{rooms.created|timesince}} ago</span>
               </div>
               <div class="room__hosted">
-                <p>Hosted By</p>
+                <p>Hosted By: </p>
                 <a href="" class="thread__author">
                   <div class="avatar avatar--small">
                     <img src="{{ rooms.host.avatar.url }}"/>
-                    <span>@{{rooms.host.user.userprofile.fullname}}</span>
+                    <span>{{rooms.host.user.userprofile.fullname}}</span>
                   </div>
                 </a>
               </div>
@@ -193,7 +204,7 @@
                   <div class="thread">
                     <div class="thread-detail">
                       <p>
-                        <strong>@{{message.user.username}}: </strong>{{message.body}}
+                        <strong>{{message.user.fullname}}: </strong>{{message.body}}
                         {% if message.image %}
                         <br>
                         <img src="{{ message.image.url }}" style="width: 25%"  alt="Sent image">
@@ -215,7 +226,7 @@
             <form class="form" action="" method="POST" enctype="multipart/form-data">
               {% csrf_token %}
               <input name="body" id="message-input" placeholder="Leave your message here..." />
-              <button type="submit" id="message-submit" hidden>submib</button>
+              <button type="submit" id="message-submit" hidden>submit</button>
               <label for="image-upload" class="image-upload-label">
                 <svg xmlns="http://www.w3.org/2000/svg" width="60" fill="currentColor" class="bi bi-card-image"
                   viewBox="0 0 16 16">
@@ -229,26 +240,58 @@
             </form>
           </div>
         </div>
-        <!-- Room End -->
 
-        <!--   Start -->
+        <div class="participants col-md-8 mx-auto">
+          <div class="upload_doc" style="display: flex">
+            <h5 class="participants__top">Documents <span>({{files.count}} uploaded)</span></h5>
+            {% if can_upload %}
+            <form method="post" enctype="multipart/form-data" style="font-size: 12px; margin-left: auto">
+              {% csrf_token %}
+              <input type="file" name="file" style="width: 180px">
+              <button type="submit">Upload File</button>
+            </form>
+            {% endif %}
+          </div>
+          <br>
+          <div class="participants__list scroll" style="padding:0;">
+            {% for file in files %}
+            <div class="file-upload" style="display: flex">
+              <p style="color: #FFF6E0; display: flex; align-items: center;">
+                <a href="{{ file.file.url }}" class="truncate-text">{{ file.file.name }}</a> uploaded by {{ file.uploaded_by }}
+              </p>
+              <form action="{% url 'delete_file' file.id %}" method="post" style="display: inline;">
+                  {% csrf_token %}
+                  <button type="button"  class="btn btn-sm" onclick="confirmDelete({{ file.id }})">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                      <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0"/>
+                    </svg>
+                  </button>
+              </form>
+            </div>
+            <hr>          
+            {% endfor %}
+          </div>
+        </div>
+
+        
         <div class="participants col-md-3 mx-auto">
           <h5 class="participants__top">Participants <span>({{participants.count}} Joined)</span></h5>
           <div class="participants__list scroll">
             {% for p in participants %}
-            <a href="" class="participant">
               <div class="avatar avatar--medium">
                 <img src="{{p.avatar.url}}" />
               </div>
               <p>
-                {{p.name}}
-                <span>@{{p.username}}</span>
+                <span style="color: #FFF6E0">@{{ p.fullname }} - 
+                  {% for role in p.roles.all %}
+                      {{ role.name }}
+                      {% if not forloop.last %}, {% endif %}
+                  {% endfor %}
+                </span>              
               </p>
-            </a>
             {% endfor %}
           </div>
         </div>
-        <!--  End -->
       </div>
     </div>
   </section>
@@ -257,26 +300,32 @@
     {{ request.user.username|json_script:"json_username"}}
     {{ request.user.id|json_script:"json_userID"}}
     {{ request.user.avatar.url|json_script:"json_userAvatar"}}
-    {{ created_at|timesince|json_script:"json_createdAt" }} {# Include the created time in JSON script #}
+    {{ created_at|timesince|json_script:"json_createdAt" }}
     {{ message_id|json_script:"json_messageID" }}
     <script>
       document.getElementById('image-upload').addEventListener('change', function (event) {
         var imageContainer = document.getElementById('image-preview-container');
-        imageContainer.innerHTML = '';  // Xóa bất kỳ hình ảnh xem trước nào đã có
+        imageContainer.innerHTML = '';  
 
-        var file = event.target.files[0];  // Lấy file hình ảnh đã chọn
+        var file = event.target.files[0];  
         if (file) {
-          var reader = new FileReader();  // Tạo một FileReader
+          var reader = new FileReader();  
           reader.onload = function (e) {
-            var img = new Image();  // Tạo một thẻ img
-            img.src = e.target.result;  // Đặt nguồn của img là dữ liệu của hình ảnh đã chọn
-            img.style.maxWidth = '100px';  // Đặt kích thước tối đa cho hình ảnh xem trước
+            var img = new Image();  
+            img.src = e.target.result;  
+            img.style.maxWidth = '100px';  
             img.style.maxHeight = '100px';
-            imageContainer.appendChild(img);  // Thêm img vào container
+            imageContainer.appendChild(img);  
           };
-          reader.readAsDataURL(file);  // Đọc nội dung của file như là một Data URL
+          reader.readAsDataURL(file);  
         }
       });
+
+      function confirmDelete(fileId) {
+        if (confirm("Are you sure you want to delete this file?")) {
+            document.getElementById('delete-form-' + fileId).submit();
+        }
+      }
     </script>
     {% endblock %}
 
