--- a/templates/list_academic_years.html
+++ b/templates/list_academic_years.html
@@ -95,17 +95,9 @@
                                     <tr>
                                       <td>{{ year.closure|date:"Y-m-d" }}</td>
                                       <td>{{ year.finalClosure|date:"Y-m-d" }}</td>
-
                                       <td>
-                                        <a
-                                          href="{% url 'update_academic_year' year.id %}"
-                                          class="btn btn-info btn-sm"
-                                          >Update
-                                        </a>
-                                        <form action="{% url 'remove_academic_year' year.id %}" method="post">
-                                            {% csrf_token %}
-                                            <button type="submit" class="btn btn-danger btn-sm">Remove</button>
-                                        </form>                                        
+                                        <a href="{% url 'update_academic_year' year.id %}" class="btn btn-info btn-sm">Update</a> | 
+                                        <a href="{% url 'remove_academic_year' year.id %}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure?');">Remove</a>
                                       </td>
                                     </tr>
                                     {% endfor %}
