commit 29: update templates

--- a/templates/academic_years_form.html
+++ b/templates/academic_years_form.html
@@ -184,9 +184,9 @@
                                     <br />
                                     <div class="text-center">
                                       {% if page == "create" %}
-                                        <button type="submit" class="btn btn-primary">Create</button>
+                                        <button type="submit" class="btn btn-primary btn-sm">Create</button>
                                       {% else %}
-                                        <button type="submit" class="btn btn-primary">Update</button>
+                                        <button type="submit" class="btn btn-primary btn-sm">Update</button>
                                       {% endif %}
                                     </div>
                                   </form>
