--- a/templates/list_academic_years.html
+++ b/templates/list_academic_years.html
@@ -81,7 +81,7 @@
                         <div class="card mb-4">
                             <div class="card-body">
                               <form method="post" enctype="">
-                                <a href="{% url 'create_academic_year' %}" class="btn btn-primary">Create New Academic Year</a>
+                                <a href="{% url 'create_academic_year' %}" class="btn btn-primary btn-sm">Create New Academic Year</a>
                                 <table class="table mt-3">
                                   <thead class="thead-dark">
                                     <tr>
