--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -285,6 +285,21 @@ https://templatemo.com/tm-569-edu-meeting
     $(window).scroll(function () {
       checkSection();
     });
+
+    function toggleUploadButton() {
+      var checkBox = document.getElementById("id_term");
+      var uploadButton = document.getElementById("uploadButton");
+
+      if (checkBox.checked == true) {
+        uploadButton.disabled = false;
+        uploadButton.classList.add("enable-hover"); // Thêm class để kích hoạt hiệu ứng hover
+      } else {
+        uploadButton.disabled = true;
+        uploadButton.classList.remove("enable-hover"); // Loại bỏ class để vô hiệu hóa hiệu ứng hover
+      }
+    }
+
+    window.onload = toggleUploadButton;
   </script>
 </body>
 </html>
