--- a/templates/listAccount.html
+++ b/templates/listAccount.html
@@ -81,7 +81,7 @@
                         <div class="card mb-4">
                             <div class="card-body">
                               <table class="table mt-3">
-                                <a href="{% url 'create_account' %}" class="btn btn-primary">Create New Account</a>
+                                <a href="{% url 'create_account' %}" class="btn btn-primary btn-sm">Create New Account</a>
                                 <thead class="thead-dark">
                                   <tr>
                                     <th scope="col">Full Name</th>
@@ -106,9 +106,9 @@
                                     
                                     <td>{{ user_profile.faculty.name }}</td>
                                     <td>
-                                      <a href="{% url 'account_edit' user_profile.user.id %}" class="btn btn-primary">Edit</a>
+                                      <a href="{% url 'account_edit' user_profile.user.id %}" class="btn btn-info btn-sm">Update</a>
                                       |
-                                      <a href="{% url 'account_delete' user_profile.user.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?');">
+                                      <a href="{% url 'account_delete' user_profile.user.id %}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete?');">
                                         Delete
                                       </a>                                      
                                     </td>
