--- a/templates/list_faculties.html
+++ b/templates/list_faculties.html
@@ -81,7 +81,7 @@
                         <div class="card mb-4">
                             <div class="card-body">
                               <form method="post" enctype="">
-                                <a href="{% url 'create_faculty' %}" class="btn btn-primary">Create New Faculty</a>
+                                <a href="{% url 'create_faculty' %}" class="btn btn-primary btn-sm">Create New Faculty</a>
                                 <table class="table mt-3">
                                   <thead class="thead-dark">
                                     <tr>
@@ -96,7 +96,7 @@
                                           <td>{{ faculty.name }}</td>
                                           <td>{{ faculty.description }}</td>
                                           <td>
-                                              <a href="{% url 'update_faculty' faculty.id %}" class="btn btn-info btn-sm">Update</a>
+                                              <a href="{% url 'update_faculty' faculty.id %}" class="btn btn-info btn-sm">Update</a> | 
                                               <a href="{% url 'remove_faculty' faculty.id %}" class="btn btn-danger btn-sm">Remove</a>
                                           </td>
                                       </tr>
