--- a/templates/role_list.html
+++ b/templates/role_list.html
@@ -81,7 +81,7 @@
                         <div class="card mb-4">
                             <div class="card-body">
                               <table class="table mt-3">
-                                <a href="{% url 'create_role' %}" class="btn btn-primary">Create New Role</a>
+                                <a href="{% url 'create_role' %}" class="btn btn-primary btn-sm">Create New Role</a>
                                 <thead class="thead-dark">
                                   <tr>
                                     <th scope="col">Role Name</th>
@@ -93,7 +93,7 @@
                                   <tr>
                                     <td>{{ role.name }}</td>
                                     <td>
-                                      <a class="btn btn-danger" href="{% url 'delete_role' role.id %}" onclick="return confirm('Are you sure you want to delete?');">
+                                      <a class="btn btn-danger btn-sm" href="{% url 'delete_role' role.id %}" onclick="return confirm('Are you sure you want to delete?');">
                                         Delete
                                       </a>
                                     </td>
