--- a/templates/room_question.html
+++ b/templates/room_question.html
@@ -2,68 +2,64 @@
 {%load static%}
 {% block content %}
 <style>
-    input[type="text"]#answer {
-  width: 100%; /* Adjust width as necessary */
-  padding: 10px; /* Adjust padding as necessary */
-  /* background-color: #1A1A2E; Dark background color */
-  border: 1px solid #0F3460; /* Blue border */
-  border-radius: 5px;
-  /* color: white; Text color */
-  font-size: 16px; /* Adjust font-size as necessary */
-  margin-top: 5px; /* Space above the input */
-  box-sizing: border-box; /* Include padding and border in the element's total width and height */
-  margin: 0 0 8px;
-}
-
-input[type="text"]#answer::placeholder {
-  color: white; /* Light color for the placeholder text */
-}
-
-label {
-  color: white; /* Label text color */
-  display: block; /* Ensure the label is on its own line */
-  margin-bottom: 5px; /* Space below the label */
-}
+    body {
+        color: #fff;
+    }
+  
+    .profile-container {
+        max-width: 550px;
+        margin: auto;
+        margin-top: 50px;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+        background-color: rgba(255, 255, 255, 0.1);
+        text-align: left; /* Align text to the left */
+    }
+  
+    .profile-container h1 {
+        color: #fff;
+        text-align: center; /* Center the header text */
+    }
+  
+    .btn-primary {
+        background-color: #2c2e3d;
+        border-color: #2c2e3d;
+        width: 60%;
+    }
+  
+    .btn-primary:hover {
+        background-color: #536881;
+        border-color: #536881;
+    }
 </style>
+
 <section class="apply-now" id="apply">
-    <div class="container">
-        <div class="layout__box">
-            <div class="layout__boxHeader">
-                <div class="layout__boxTitle">
-                    <a href="{{request.META.HTTP_REFERER}}">
-                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                            viewBox="0 0 32 32">
-                            <title>arrow-left</title>
-                            <path
-                                d="M13.723 2.286l-13.723 13.714 13.719 13.714 1.616-1.611-10.96-10.96h27.625v-2.286h-27.625l10.965-10.965-1.616-1.607z">
-                            </path>
-                        </svg>
-                    </a>
-                    <h3>Back</h3>
-                </div>
-            </div>
-            <div class="layout__body">
-                <form class="form" method="POST" action="">
-                    {% csrf_token %}
-                    <div class="form__group">
-                        <h2>Room: {{ room.name }}</h2>
-                        <p>Question: {{ room.question }}</p>
-                    </div>
-
-                    <div class="for__group">
-                        <form method="post">
-                            {% csrf_token %}
-                            <label for="answer">Your anwser:</label>
-                            <input type="text" id="answer" name="answer" required>
-                            <div class="for__group">
-                                <input class="btn btn--main" type="submit" value="Confirm" />
-                            </div>
-                        </form>
-                    </div>
-
-                </form>
-            </div>
+    <div class="container profile-container">
+      <h3 class="mb-4 text-center">Answer Room Question To Join</h3>
+  
+      <!-- Personal Information Form -->
+      <form class="form" action="" method="POST">
+          {% csrf_token %}
+        <div class="mb-3">
+            <h3 class="text-center">Into Room: {{ room.name }}</h3>
+            <label class=" mt-3 form-label" for="id_faculty">Question: {{ room.question }}</label>
         </div>
+
+        <div class="mb-3">
+            <form method="post">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <label for="answer">Your anwser:</label>
+                    <input type="text" id="answer" name="answer" class="form-control" required>
+                </div>
+                <div class="text-center">
+                    <a class="btn btn-danger" href="{{request.META.HTTP_REFERER}}">Cancel</a>
+                    <button type="submit" class="btn btn-primary">Submit answer</button>
+                </div>
+            </form>
+        </div>
+      </form>
     </div>
-</section>
+  </section>
 {% endblock content %}
